[gd_scene load_steps=13 format=2]

[ext_resource path="res://KinematicBody.gd" type="Script" id=1]
[ext_resource path="res://default_env.tres" type="Environment" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.203922, 0.380392, 0.196078, 1 )

[sub_resource type="BoxShape" id=4]

[sub_resource type="Environment" id=5]
ambient_light_color = Color( 0.592157, 0.588235, 0.588235, 1 )

[sub_resource type="CubeMesh" id=6]

[sub_resource type="BoxShape" id=7]

[sub_resource type="BoxShape" id=8]

[sub_resource type="CubeMesh" id=9]

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.690196, 0.717647, 0.772549, 1 )

[node name="World" type="Spatial"]

[node name="Plane" type="StaticBody" parent="."]
transform = Transform( 20, 0, 0, 0, 0.1, 0, 0, 0, 20, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Plane"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Plane/CollisionShape"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 25, 0 )
light_color = Color( 0.898039, 0.898039, 0.760784, 1 )
light_energy = 2.0

[node name="Cube" type="KinematicBody" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.8, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Cube"]
shape = SubResource( 4 )

[node name="CSGBox" type="CSGBox" parent="Cube/CollisionShape"]

[node name="Target" type="Spatial" parent="Cube"]

[node name="Camera" type="Camera" parent="Cube/Target"]
transform = Transform( 2, 0, 0, 0, 1.81262, 0.845237, 0, -0.845237, 1.81262, 0, 8, 12 )
environment = SubResource( 5 )
fov = 103.135

[node name="CSGMesh" type="CSGMesh" parent="Cube"]

[node name="Item" type="MeshInstance" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.2, -10 )
mesh = SubResource( 6 )
material/0 = null

[node name="Area" type="Area" parent="Item"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Item/Area"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
visible = false
shape = SubResource( 7 )

[node name="StartText" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Control" type="Control" parent="StartText"]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Panel" type="Panel" parent="StartText/Control"]
margin_left = 134.0
margin_top = 82.0
margin_right = 300.0
margin_bottom = 122.0

[node name="StartText" type="Label" parent="StartText/Control/Panel"]
margin_right = 168.0
margin_bottom = 42.0
text = "Move around (WASD)."

[node name="PickupText" type="CenterContainer" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Control" type="Control" parent="PickupText"]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Panel" type="Panel" parent="PickupText/Control"]
margin_left = 134.0
margin_top = 82.0
margin_right = 300.0
margin_bottom = 122.0

[node name="PickupText" type="Label" parent="PickupText/Control/Panel"]
margin_right = 168.0
margin_bottom = 42.0
text = "Pickup item with E."

[node name="Menu" type="CenterContainer" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Control" type="Control" parent="Menu"]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Panel" type="Panel" parent="Menu/Control"]
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 460.0

[node name="Button" type="MenuButton" parent="Menu/Control/Panel"]
margin_left = 325.0
margin_top = 115.0
margin_right = 491.0
margin_bottom = 228.0
action_mode = 1

[node name="MenuText" type="Label" parent="Menu/Control/Panel/Button"]
margin_left = 25.0
margin_top = -15.0
margin_right = 145.0
margin_bottom = 135.0
text = "Exit"
align = 1
valign = 1
uppercase = true

[node name="HScrollBar" type="HScrollBar" parent="Menu/Control/Panel"]
margin_left = 804.0
margin_top = 360.0
margin_right = 833.0
margin_bottom = 721.0
rect_rotation = 180.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 10, 0, 0, 0, 20, 20, 0, 0 )
shape = SubResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/CollisionShape"]
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="StaticBody2" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody2"]
transform = Transform( 1, 0, 0, 0, 10, 0, 0, 0, 20, -20, 0, 0 )
shape = SubResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody2/CollisionShape"]
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="StaticBody3" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody3"]
transform = Transform( -4.37114e-008, 0, 20, 0, 10, 0, -1, 0, -8.74228e-007, 0, 0, 20 )
shape = SubResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody3/CollisionShape"]
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="StaticBody4" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody4"]
transform = Transform( -4.37114e-008, 0, 20, 0, 10, 0, -1, 0, -8.74228e-007, 0, 0, -20 )
shape = SubResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody4/CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 2.22045e-016, 0, 1, 0, 0, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )
[connection signal="body_entered" from="Item/Area" to="Cube" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Item/Area" to="Cube" method="_on_Area_body_exited"]
